Feat: Add notes, server side
